javali_tests/A3/A4_keinestamSchmid/fail/Error.2.3.18.NOSUCHETYPECAST.javali
//The type name in a new statement or cast statement must be the name of a 
//valid type. (NO SUCH TYPE)
//rule 2.3.18


class Main {
int y;
	void main() {
		int x;
		int z;
		z = (NOSUCHTYPE)x;
	}
}